tests/snapshots/parser__for_loop_errors__break_inside_if_outside_loop.snap
---
source: tests/parser.rs
expression: "parse(\"if true { break }\")"
---
Err(
    ParseError {
        message: "`break` used outside a loop",
        span: Span {
            start: 10,
            end: 15,
        },
    },
)
