tests/snapshots/parser__for_loop_errors__break_outside_loop.snap
---
source: tests/parser.rs
expression: "parse(\"break\")"
---
Err(
    ParseError {
        message: "`break` used outside a loop",
        span: Span {
            start: 0,
            end: 5,
        },
    },
)
