tests/snapshots/parser__for_loop_errors__continue_outside_loop.snap
---
source: tests/parser.rs
expression: "parse(\"continue\")"
---
Err(
    ParseError {
        message: "`continue` used outside a loop",
        span: Span {
            start: 0,
            end: 8,
        },
    },
)
