tests/snapshots/parser__for_loop_errors__missing_body.snap
---
source: tests/parser.rs
expression: "parse(\"for x in xs\")"
---
Err(
    ParseError {
        message: "expected `{` to start `for` body, found Eof",
        span: Span {
            start: 11,
            end: 11,
        },
    },
)
