tests/snapshots/parser__for_loop_errors__missing_in_keyword.snap
---
source: tests/parser.rs
expression: "parse(\"for x xs { }\")"
---
Err(
    ParseError {
        message: "expected `in` after loop variable, found Identifier(\"xs\")",
        span: Span {
            start: 6,
            end: 8,
        },
    },
)
