tests/snapshots/parser__for_loop_errors__missing_loop_var.snap
---
source: tests/parser.rs
expression: "parse(\"for in xs { }\")"
---
Err(
    ParseError {
        message: "expected loop variable after `for`, found In",
        span: Span {
            start: 4,
            end: 6,
        },
    },
)
